--- a/index.html
+++ b/index.html
@@ -4,9 +4,117 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Test Busines Brochure</title>
+    <link rel="stylesheet" href="./styles/stylesheet.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+     <div class="nav">
+         <nav>
+             <ul>
+                 <li>Services</li>
+                 <li>Shop</li>
+                 <li>About</li>
+                 <li>Gallery</li>
+                 <li>Contact</li>
+             </ul>
+         </nav>
+     </div>   
+     <h1>NAME OF SALON ??</h1>
+     <button class="btn">Book Now</button>
+    <div class="section sevices">
+        <h1>Services</h1>
+        <ul class="services-tabs">
+            <li>Color</li>
+            <li>Wash</li>
+            <li>Cut</li>
+            <li>Style</li>
+            <li>Spa</li>
+        </ul>
+        <div class="menu">
+            <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
+            <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
+            <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
+            <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
+            <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
+            <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
+        </div>
+    </div> 
+    <!-- end of services -->
+    <div class="section shop">
+        <h1>Our Products</h1>
+        <div class="fleximage-and-productsection">
+            <img src="#0" alt="PNG IMAGE GIRL">
+            <div class="product-list">
+                <button class="arrowup"></button>
+                <ul>
+                    <li>product1</li>
+                    <li>product2</li>
+                    <li>product3</li>
+                </ul>
+                <button class="arrowdown"></button>
+            </div>
+        </div>
+    </div>
+    <!-- end of shop -->
+    <div class="section about">
+        <h1>About</h1>
+        <div class="about-sec">
+            <div class="team-bubbles">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="ours-story">
+                <h3>Our Story</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi illum harum, officiis alias asperiores placeat nisi molestiae tempore est pariatur aut sequi corporis, velit consequatur soluta ad sapiente rerum blanditiis.</p>
+            </div>
+            <div class="join">
+                <h4>Join the Team!</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti impedit cum quam consectetur. </p>
+                <button class="apply-btn"></button>
+            </div>
+        </div>
+    </div>
+    <!-- end of about -->
+    <div class="section gallery">
+        <h1>Gallery *Fix Section</h1>
+        <button class="arrowleft"></button>
+        <img src="#0" alt="Slideshow">
+        <button class="arrowright"></button>
+    </div>
+    <!-- end of gallery -->
+    <div class="section contact">
+        <h1>Contact</h1>
+        <div class="flex-map-form-image">
+            <img src="#0" alt="Google Maps">
+            <form action="Contact-Us"
+                    method="post"
+                    name="contact-form"
+                    class="contact-form"
+                    id="form">
+            <label for="name">Name</label>
+            <input type="text"
+                    id="name"
+                    name="name">
+            <label for="email">Email</label>
+            <input type="text"
+                    id="email"
+                    name="email">
+            <textarea name="textarea" id="textarea">Enter text here..</textarea>
+            </form>
+            <img src="#0" alt="PNG Image here">
+        </div>
+    </div>
+    <!-- end of contact -->
+    <footer>
+        <p>&copy; test 1</p>
+    </footer>
+    </div>
+    <!-- end of page wrapper -->
 </body>
 </html>
