Removed Book now btn, added to nav bar

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                  <li>About</li>
                  <li>Gallery</li>
                  <li>Contact</li>
+                 <li>Book Now</li>
              </ul>
          </nav>
      </div>   
      <h1>NAME OF SALON ??</h1>
-     <button class="btn">Book Now</button>
     <div class="section sevices">
         <h1>Services</h1>
         <ul class="services-tabs">
