edited the form : added line breaks, added select box, added radio area

--- a/index.html
+++ b/index.html
@@ -101,11 +101,37 @@
             <input type="text"
                     id="name"
                     name="name">
+            <br>
             <label for="email">Email</label>
             <input type="text"
                     id="email"
                     name="email">
-            <textarea name="textarea" id="textarea">Enter text here..</textarea>
+            <br>
+            <label for="phone">Phone</label>
+            <input type="text"
+                    id="phone"
+                    name="phone">
+            <br>
+            <label for="question">How would you like to be contacted?</label>
+            <input type="radio"
+                    id="phone-call"
+                    name="phone-call">
+            <label for="phone-call">Phone</label>
+            <input type="radio"
+                    id="email-me"
+                    name="email-me">
+            <label for="email-me">Email</label>
+            <br>
+            <label for="select-box">Select Reason: </label>
+            <select name="reason" id="select-box">
+                <option value="appointment">Appointment</option>
+                <option value="workshop">Workshop</option>
+                <option value="training">Training</option>
+                <option value="vendor">Vendor</option>
+                <option value="application">Application</option>
+            </select>
+            <br>
+            <textarea name="textarea" id="textarea">Enter comments here..</textarea>
             </form>
             <img src="#0" alt="PNG Image here">
         </div>
