--- a/index.html
+++ b/index.html
@@ -9,21 +9,29 @@
 </head>
 <body>
     <div class="wrapper">
+     <div class="image-header">
+        
      <div class="nav">
          <nav>
              <ul>
-                 <li>Services</li>
-                 <li>Shop</li>
-                 <li>About</li>
-                 <li>Gallery</li>
-                 <li>Contact</li>
-                 <li>Book Now</li>
+                 <li><a href="#0"> Services</a></li>
+                 <li><a href="#0">Shop</a></li>
+                 <li><a href="#0">About</a></li>
+                 <li><a href="#0">Gallery</a></li>
+                 <li><a href="#0">Contact</a></li>
+                 <li><a href="#0">Book now</a></li>
              </ul>
          </nav>
+         <img src="./images/cutout-skai.png" alt="Skai" class="img-01">
+         <img src="./images/cutout-skai.png" alt="Skai-two" class="img-02">
      </div>   
-     <h1>NAME OF SALON ??</h1>
+     <!-- <h1>kinks n' curls</h1> -->
+    </div> 
+    <!-- end of where the header images and stuff will go -->
     <div class="section sevices">
-        <h1>Services</h1>
+        <div class="section-01-head-box">
+        <h2 class="sectionhead section-01-head">Services</h2>
+        </div>
         <ul class="services-tabs">
             <li>Color</li>
             <li>Wash</li>
@@ -42,7 +50,7 @@
     </div> 
     <!-- end of services -->
     <div class="section shop">
-        <h1>Our Products</h1>
+        <h2 class="sectionhead section-02-head">Our Products</h2>
         <div class="fleximage-and-productsection">
             <img src="#0" alt="PNG IMAGE GIRL">
             <div class="product-list">
@@ -58,7 +66,7 @@
     </div>
     <!-- end of shop -->
     <div class="section about">
-        <h1>About</h1>
+        <h2 class="sectionhead section-03-head">About</h2>
         <div class="about-sec">
             <div class="team-bubbles">
                 <ul>
@@ -82,14 +90,14 @@
     </div>
     <!-- end of about -->
     <div class="section gallery">
-        <h1>Gallery *Fix Section</h1>
+        <h2 class="sectionhead section-04-head">Gallery *Fix Section</h2>
         <button class="arrowleft"></button>
         <img src="#0" alt="Slideshow">
         <button class="arrowright"></button>
     </div>
     <!-- end of gallery -->
     <div class="section contact">
-        <h1>Contact</h1>
+        <h2 class="sectionhead section-05-head">Contact</h2>
         <div class="flex-map-form-image">
             <img src="#0" alt="Google Maps">
             <form action="Contact-Us"
