fixing stupid header

--- a/index.html
+++ b/index.html
@@ -9,29 +9,23 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="nav">
-            <nav>
-                <ul>
-                    <li><a href="#0"> Services</a></li>
-                    <li><a href="#0">Shop</a></li>
-                    <li><a href="#0">About</a></li>
-                    <li><a href="#0">Gallery</a></li>
-                    <li><a href="#0">Contact</a></li>
-                    <li><a href="#0">Book now</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div class="filler-header-pink"></div>
-        <div class="image-header">
-                <img src="./images/cutout-skai.png" alt="Skai" class="img-01">
+        <nav>
+            <ul>
+                <li><a href="#0"> Services</a></li>
+                <li><a href="#0">Shop</a></li>
+                <li><a href="#0">About</a></li>
+                <li><a href="#0">Gallery</a></li>
+                <li><a href="#0">Contact</a></li>
+                <li><a href="#0">Book now</a></li>
+            </ul>
+        </nav>
+        <div class="filler-header-pink">
+                <!-- <img src="./images/cutout-skai.png" alt="Skai" class="img-01"> -->
                 <img src="./images/big-cutout-skai.png" alt="Skai-two" class="img-02">
-         
-        <div><img src="./images/Asset 3.svg" alt="swoop" class="swoop"></div>        
+                <!-- <img src="./images/Asset 3.svg" alt="swoop" class="swoop"></div>         -->
         <!-- <h1>kinks n' curls</h1> -->
-        </div> 
-    <!-- end of where the header images and stuff will go -->
-    
-        <!-- <div class="sec1bk"> -->
+ 
+        </div>
         <h2 class="sectionhead section-01-head">Services</h2>
         <!-- </div> -->
         <div class="section sevices">
