--- a/index.html
+++ b/index.html
@@ -20,14 +20,17 @@
             </ul>
         </nav>
         <div class="filler-header-pink">
-                <!-- <img src="./images/cutout-skai.png" alt="Skai" class="img-01"> -->
+                <img src="./images/cutout-skai.png" alt="Skai" class="img-01">
                 <img src="./images/big-cutout-skai.png" alt="Skai-two" class="img-02">
-                <!-- <img src="./images/Asset 3.svg" alt="swoop" class="swoop"></div>         -->
+                <img src="./images/Asset 5.svg" alt="whitespace" class="whitespace">        
+                <div class="bighead">
+                    <img src="./images/Asset 3.svg" alt="swoop" class="swoop">
+                    <h2 class="sectionhead section-01-head">Services</h2>
+                </div>
         <!-- <h1>kinks n' curls</h1> -->
- 
+        
+        
         </div>
-        <h2 class="sectionhead section-01-head">Services</h2>
-        <!-- </div> -->
         <div class="section sevices">
             <ul class="services-tabs">
                 <li>Color</li>
