Removed Image PNG

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="section shop">
             <h2 class="sectionhead section-02-head">Our Products</h2>
             <div class="fleximage-and-productsection">
-                <img src="./images/cutoutX3.png" alt="PNG IMAGE GIRL">
+                <img src="#0" alt="PNG IMAGE GIRL">
                 <div class="product-list">
                     <button class="arrowup"></button>
                     <ul>
