Review Section Skeleton
Added:
lorem ipsum fillers
image areas

--- a/index.html
+++ b/index.html
@@ -98,10 +98,31 @@
         </div>
         <!-- end of about -->
         <div class="section gallery">
-            <h2 class="sectionhead section-04-head">Gallery *Fix Section</h2>
-            <button class="arrowleft"></button>
-            <img src="#0" alt="Slideshow">
-            <button class="arrowright"></button>
+            <h2 class="sectionhead section-04-head">Reviews</h2>
+            <div class="review-area">
+                <div class="review-one">
+                    <img src="#0" alt="Photo">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam facere saepe, corporis neque veritatis eum doloribus a doloremque obcaecati possimus magnam repellendus delectus est voluptate voluptatem voluptatibus nam ullam nobis!</p>
+                </div>
+                <div class="review-two">
+                    <img src="#0" alt="Photo">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam facere saepe, corporis neque veritatis eum doloribus a doloremque obcaecati possimus magnam repellendus delectus est voluptate voluptatem voluptatibus nam ullam nobis!</p>
+                </div>
+                <div class="review-three">
+                    <img src="#0" alt="Photo">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam facere saepe, corporis neque veritatis eum doloribus a doloremque obcaecati possimus magnam repellendus delectus est voluptate voluptatem voluptatibus nam ullam nobis!</p>
+                </div>
+            </div>
+            <!-- end of reviews -->
+            <div class="gallery-area">
+                <h2>Blah Blah Blah Blah </h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate hic similique soluta molestiae voluptatibus, iure voluptas ab perspiciatis provident aspernatur laborum odit sed in error suscipit fugit ea modi consequuntur.</p>
+                <img src="#0" alt="Gallery Photos">
+                <img src="#0" alt="Gallery Photos">
+                <img src="#0" alt="Gallery Photos">
+                <img src="#0" alt="Gallery Photos">
+                <img src="#0" alt="Gallery Photos">
+            </div>
         </div>
         <!-- end of gallery -->
         <div class="section contact">
