Changed class names for review sections

--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
         <div class="section gallery">
             <h2 class="sectionhead section-04-head">Reviews</h2>
             <div class="review-area">
-                <div class="review-one">
+                <div class="review one">
                     <img src="#0" alt="Photo">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam facere saepe, corporis neque veritatis eum doloribus a doloremque obcaecati possimus magnam repellendus delectus est voluptate voluptatem voluptatibus nam ullam nobis!</p>
                 </div>
-                <div class="review-two">
+                <div class="review two">
                     <img src="#0" alt="Photo">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam facere saepe, corporis neque veritatis eum doloribus a doloremque obcaecati possimus magnam repellendus delectus est voluptate voluptatem voluptatibus nam ullam nobis!</p>
                 </div>
-                <div class="review-three">
+                <div class="review three">
                     <img src="#0" alt="Photo">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam facere saepe, corporis neque veritatis eum doloribus a doloremque obcaecati possimus magnam repellendus delectus est voluptate voluptatem voluptatibus nam ullam nobis!</p>
                 </div>
