Editing content Reveiws section

--- a/index.html
+++ b/index.html
@@ -101,27 +101,31 @@
             <h2 class="sectionhead section-04-head">Reviews</h2>
             <div class="review-area">
                 <div class="review one">
-                    <img src="#0" alt="Photo">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam facere saepe, corporis neque veritatis eum doloribus a doloremque obcaecati possimus magnam repellendus delectus est voluptate voluptatem voluptatibus nam ullam nobis!</p>
+                    <img src="./images/profile-img.png" alt="Photo">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam facere saepe, corporis neque veritatis eum doloribus a doloremque!</p>
                 </div>
                 <div class="review two">
-                    <img src="#0" alt="Photo">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam facere saepe, corporis neque veritatis eum doloribus a doloremque obcaecati possimus magnam repellendus delectus est voluptate voluptatem voluptatibus nam ullam nobis!</p>
+                    <img src="./images/profile-img.png" alt="Photo">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam facere saepe, corporis neque veritatis eum doloribus a doloremque !</p>
                 </div>
                 <div class="review three">
-                    <img src="#0" alt="Photo">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam facere saepe, corporis neque veritatis eum doloribus a doloremque obcaecati possimus magnam repellendus delectus est voluptate voluptatem voluptatibus nam ullam nobis!</p>
+                    <img src="./images/profile-img.png" alt="Photo">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam facere saepe, corporis neque veritatis eum doloribus a doloremque!</p>
                 </div>
             </div>
             <!-- end of reviews -->
             <div class="gallery-area">
-                <h2>Blah Blah Blah Blah </h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate hic similique soluta molestiae voluptatibus, iure voluptas ab perspiciatis provident aspernatur laborum odit sed in error suscipit fugit ea modi consequuntur.</p>
-                <img src="#0" alt="Gallery Photos">
-                <img src="#0" alt="Gallery Photos">
-                <img src="#0" alt="Gallery Photos">
-                <img src="#0" alt="Gallery Photos">
-                <img src="#0" alt="Gallery Photos">
+                <h2 class="gallery-header">Blah Blah Blah Blah </h2>
+                <p class="gallery-header">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate hic similique soluta molestiae voluptatibus, iure voluptas ab perspiciatis provident aspernatur laborum odit sed in error suscipit fugit ea modi consequuntur.</p>
+                <div class="images">
+                    <button>LEFT</button>
+                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos">
+                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos">
+                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos">
+                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos">
+                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos">
+                    <button>RIGHT</button>
+                </div>
             </div>
         </div>
         <!-- end of gallery -->
