--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <div class="content-wrapper">
         <h2 class="sectionhead section-01-head">Services</h2>
         <div class="section sevices">
-            <!-- <ul class="services-tabs">
+            <ul class="services-tabs">
                 <li>Color</li>
                 <li>Wash</li>
                 <li>Cut</li>
                 <li>Style</li>
                 <li>Spa</li>
-            </ul> -->
+            </ul>
             <div class="menu">
                 <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
                 <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
