--- a/sections.html
+++ b/sections.html
@@ -45,7 +45,7 @@
     <div class="section shop">
         <h1>Our Products</h1>
         <div class="fleximage-and-productsection">
-            <img src="images/braided.png" alt="PNG IMAGE GIRL">
+            <!-- <img src="images/braided.png" alt="PNG IMAGE GIRL"> -->
             <div class="product-list">
                 <button class="arrowup"></button>
                 <ul>
