--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@
         <!-- end of gallery -->
         <div class="section contact">
             <h2 class="sectionhead section-05-head">Contact</h2>
+            
             <div class="flex-map-form-image">
-                <img src="#0" alt="Google Maps">
+                <h4>Send us a message</h4>
                 <form action="Contact-Us"
                         method="post"
                         name="contact-form"
@@ -174,14 +175,30 @@
                 <br>
                 <textarea name="textarea" id="textarea">Enter comments here..</textarea>
                 </form>
-                <img src="#0" alt="PNG Image here">
-            </div>
+             </div>     
         </div>
         <!-- end of contact -->
     </div>
     <!-- end of the content wrapper -->
     <footer>
-        <p>&copy; test 1</p>
+        <address>
+            Kinks n' Kurls<br/>
+            2354 Pacific Coast Highway<br/>
+            California, USA<br/>
+            +311-555-2368<br/>
+            Email: <a href="#0">kinks_kurls@gmail.com</a><br/>
+        </address>
+        <br>
+        <div class="social-media">
+            <p>Social Media</p>
+            <div class="icons">
+              <a href="#0"><img src="#0" alt="Twitter" width="30" height="30"></a>
+              <a href="#0"><img src="#0" alt="Facebook" width="30" height="30"></a>
+              <a href="#0"><img src="#0" alt="Instagram" width="30" height="30"></a>
+            </div>
+        </div>
+        <br>
+        <p>&copy;  2018 Y.Stubbs & T.McIntire</p>
     </footer>
     </div>
     <!-- end of page wrapper -->
