--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
                 <h2 class="gallery-header">Blah Blah Blah Blah </h2>
                 <p class="gallery-header">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate hic similique soluta molestiae voluptatibus, iure voluptas ab perspiciatis provident aspernatur laborum odit sed in error suscipit fugit ea modi consequuntur.</p>
                 <div class="images">
-                    <button>LEFT</button>
-                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos">
-                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos">
-                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos">
-                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos">
-                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos">
-                    <button>RIGHT</button>
+                    <!-- <p><i class="arrow left"></i></p>     -->
+                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos" class="img-gal">
+                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos" class="img-gal">
+                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos" class="img-gal">
+                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos" class="img-gal">
+                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos" class="img-gal">
+                    <!-- <p><i class="arrow right"></i></p> -->
                 </div>
             </div>
         </div>
