--- a/index.html
+++ b/index.html
@@ -42,18 +42,63 @@
                 <li>Spa</li>
             </ul> -->
             <div class="menu">
-                <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
-                <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
-                <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
-                <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
-                <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
-                <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
-                <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
-                <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
-                <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
-                <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
-                <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
-                <figure class="menu-pic">blah <figurecaption class="menu-text">text here</figurecaption></figure>
+                <div class="menu-pic">
+                    <h4 class="menu-text">Color</h4>
+                    <p class="prices">
+                        Foils $80+ <br>Ombre'/Balayage $180-$200 <br> Tint $70 <br>Toner $30
+                    </p>
+                </div>
+                <div class="menu-pic">
+                    <h4 class="menu-text">Styling</h4>
+                    <p class="prices">
+                        Blah $100 <br>Blah $100 <br> Blah $100 <br>Blah $100 <br>Blah $100
+                    </p>
+                </div>
+                <div class="menu-pic">
+                    <h4 class="menu-text">Cut</h4>
+                    <p class="prices">
+                        Blah $100 <br>Blah $100 <br> Blah $100 <br>Blah $100 <br>Blah $100
+                    </p>
+                </div>
+                <div class="menu-pic">
+                    <h4 class="menu-text">Wash</h4>
+                    <p class="prices">
+                        Blah $100 <br>Blah $100 <br> Blah $100 <br>Blah $100 <br>Blah $100
+                    </p>
+                </div>
+                <div class="menu-pic">
+                    <h4 class="menu-text">Mens</h4>
+                    <p class="prices">
+                        Blah $100 <br>Blah $100 <br> Blah $100 <br>Blah $100 <br>Blah $100
+                    </p>
+                </div>
+                <div class="menu-pic">
+                    <h4 class="menu-text">Treatment</h4>
+                    <p class="prices">
+                        Blah $100 <br>Blah $100 <br> Blah $100 <br>Blah $100 <br>Blah $100
+                    </p>
+                </div>
+                <div class="menu-pic">
+                    <h4 class="menu-text">Chemical</h4>
+                    <p class="prices">
+                        Blah $100 <br>Blah $100 <br> Blah $100 <br>Blah $100 <br>Blah $100
+                    </p>
+                </div>
+                <div class="menu-pic">
+                    <h4 class="menu-text">Extension</h4>
+                    <p class="prices">
+                        Blah $100 <br>Blah $100 <br> Blah $100 <br>Blah $100 <br>Blah $100
+                    </p>
+                </div>
+                <div class="menu-pic">
+                    <h4 class="menu-text">Spa<h4>
+                        <p class="prices">
+                            Blah $100 <br>Blah $100 <br> Blah $100 <br>Blah $100 <br>Blah $100
+                        </p>
+                </div>
+                <!-- <figure class="menu-pic"><figurecaption class="menu-text">text here</figurecaption></figure>
+                <figure class="menu-pic"><figurecaption class="menu-text">text here</figurecaption></figure>
+                <figure class="menu-pic"><figurecaption class="menu-text">text here</figurecaption></figure> -->
             </div>
         </div> 
         <!-- end of services -->
