--- a/index.html
+++ b/index.html
@@ -57,23 +57,38 @@
             </div>
         </div> 
         <!-- end of services -->
-        <div class="section shop">
+        <div class="shop">
             <h2 class="sectionhead section-02-head">Our Products</h2>
             <div class="fleximage-and-productsection">
-                <img src="#0" alt="PNG IMAGE GIRL">
+                <img src="images/products1.png" alt="Hippie Girl">
                 <div class="product-list">
                     <button class="arrowup"></button>
                     <ul>
+                        <div class="circle circle-01"></div>
                         <li>product1</li>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate minima sit fugit, adipisci enim quasi eaque molestiae autem qui corporis eveniet odio molestias alias similique quis in quo porro vel.
+                        Provident esse sed ipsam a asperiores unde assumenda voluptates debitis quibusdam, incidunt, dicta rerum aperiam deleniti fugiat neque ex illo. Suscipit, natus! Magni pariatur nam minima aspernatur eligendi debitis veritatis.
+                        Dolorum voluptatum, perferendis quibusdam veniam at facere minima inventore! Quis, natus! Mollitia dolorem saepe velit dicta pariatur necessitatibus, vel, quidem repudiandae ab facilis placeat aperiam nemo delectus enim cum tempora.
+\
+                  </p>
+                  <div class="circle circle-02"></div>
                         <li>product2</li>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, veniam? Nostrum libero ipsum at eaque eligendi enim pariatur dolorem distinctio esse inventore, tempora quis reprehenderit blanditiis, omnis vero reiciendis placeat!
+                        Suscipit hic neque quibusdam iure excepturi, unde eum odio assumenda magnam beatae, numquam quis ipsum eaque aperiam, cumque reprehenderit velit corrupti? Molestiae, quo. Consectetur totam minus ut qui laudantium ducimus?
+                        Iure facilis voluptas ad beatae, minus quas architecto suscipit magnam, illo accusantium cupiditate tenetur vero, sit voluptatum neque voluptatibus. Autem iste aliquam illo delectus ex soluta odio ipsum nisi pariatur?
+                        Quod optio dolorem aperiam provident temporibus cum praesentium necessitatibus illo recusandae omnis debitis ducimus, aspernatur a. Quidem mollitia hic nemo officiis ducimus consequuntur, voluptates nostrum, ex esse optio, at animi!
+                        Ipsa numquam, delectus adipisci velit recusandae sequi rem explicabo iure voluptas? Doloribus nihil quia ab veniam quas ullam! Vero aut esse possimus. Nulla tenetur explicabo quam minima at temporibus exercitationem!</p>
                         <li>product3</li>
+                        <div class="circle circle-03"></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus nobis rem alias ex ea aspernatur exercitationem accusantium neque nemo explicabo, deleniti sit ad mollitia, asperiores dolorem quisquam? Dignissimos, aperiam accusamus!Quam eius accusamus vel. Assumenda, veritatis! Deleniti, autem assumenda necessitatibus laborum animi laboriosam deserunt eum nobis unde dolorem blanditiis ut nisi eos quas laudantium iste omnis expedita eligendi vel vero.</p>
                     </ul>
                     <button class="arrowdown"></button>
                 </div>
             </div>
         </div>
+        
         <!-- end of shop -->
-        <div class="section about">
+        <div class="about">
             <h2 class="sectionhead section-03-head">About</h2>
             <div class="about-sec">
                 <div class="team-bubbles">
