--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="shop">
             <h2 class="sectionhead section-02-head">Our Products</h2>
             <div class="fleximage-and-productsection">
-                <img src="images/products1.png" alt="Hippie Girl">
+                <img src="images/products2-LEFT.png" alt="Hippie Girl">
                 <div class="product-list">
                     <button class="arrowup"></button>
                     <ul>
