Fixed menu area

--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
                         Blah $100 <br>Blah $100 <br> Blah $100 <br>Blah $100 <br>Blah $100
                     </p>
                 </div>
-                <div class="menu-pic">
+                <!-- <div class="menu-pic">
                     <h4 class="menu-text">Spa<h4>
                         <p class="prices">
                             Blah $100 <br>Blah $100 <br> Blah $100 <br>Blah $100 <br>Blah $100
                         </p>
-                </div>
+                </div> -->
                 <!-- <figure class="menu-pic"><figurecaption class="menu-text">text here</figurecaption></figure>
                 <figure class="menu-pic"><figurecaption class="menu-text">text here</figurecaption></figure>
                 <figure class="menu-pic"><figurecaption class="menu-text">text here</figurecaption></figure> -->
