added social media icons to html

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 </div>
                 </div>
                 <br>
-                <label for="question">How would you like to be contacted?</label>
+                <label for="question" class="question-radio">How would you like to be contacted?</label>
                 <div><input type="radio"
                         id="phone-call"
                         name="phone-call"
@@ -271,6 +271,7 @@
                     +311-555-2368<br/>
                     Email: <a href="#0">kinks_kurls@gmail.com</a><br/>
                 </address>
+                <img src="./images/products1-REVISED.png" alt="Flower Girl" class="flower-girl">
   
             </div>
         <!-- end of contact -->
@@ -278,9 +279,9 @@
     <!-- end of the content wrapper -->
     <footer>
             <div class="icons">
-              <a href="#0"><img src="#0" alt="Twitter" width="30" height="30"></a>
-              <a href="#0"><img src="#0" alt="Facebook" width="30" height="30"></a>
-              <a href="#0"><img src="#0" alt="Instagram" width="30" height="30"></a>
+              <a href="#0"><img src="./images/twitter.png" alt="Twitter" width="30" height="30"></a>
+              <a href="#0"><img src="./images/facebook.png" alt="Facebook" width="30" height="30"></a>
+              <a href="#0"><img src="./images/instagram.png" alt="Instagram" width="30" height="30"></a>
             </div>
         <p>&copy;  2018 Y.Stubbs & T.McIntire</p>
     </footer>
