--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <div class="icons">
               <a href="#0"><img src="./images/twitter.png" alt="Twitter" width="30" height="30"></a>
               <a href="#0"><img src="./images/facebook.png" alt="Facebook" width="30" height="30"></a>
-              <a href="#0"><img src="./images/instagram.png" alt="Instagram" width="30" height="30"></a>
+              <a href="#0"><img src="./images/instagram-2.png" alt="Instagram" width="30" height="30"></a>
             </div>
         <p>&copy;  2018 Y.Stubbs & T.McIntire</p>
     </footer>
